<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/couleurDes"
        android:title="@string/couleurs"
        android:icon="@drawable/ic_color_lens_black_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/couleursZirconia"
                android:title="@string/zirconia">
                <menu>
                    <item
                        android:id="@+id/couleurRougeZ"
                        android:title="@string/z"
                        android:icon="@drawable/ic_menu_couleurs"/>
                    <item
                        android:id="@+id/couleurOrangeZ"
                        android:title="@string/i"
                        android:icon="@drawable/ic_menu_couleurs"/>
                    <item
                        android:id="@+id/couleurJauneZ"
                        android:title="@string/r"
                        android:icon="@drawable/ic_menu_couleurs"/>
                    <item
                        android:id="@+id/couleurRoseZ"
                        android:title="@string/c"
                        android:icon="@drawable/ic_menu_couleurs"/>
                    <item
                        android:id="@+id/couleurMauveZ"
                        android:title="@string/o"
                        android:icon="@drawable/ic_menu_couleurs"/>
                    <item
                        android:id="@+id/couleurBleuZ"
                        android:title="@string/n"
                        android:icon="@drawable/ic_menu_couleurs"/>
                    <item
                        android:id="@+id/couleurTurquoiseZ"
                        android:title="@string/i"
                        android:icon="@drawable/ic_menu_couleurs"/>
                    <item
                        android:id="@+id/couleurVertZ"
                        android:title="@string/a"
                        android:icon="@drawable/ic_menu_couleurs"/>
                </menu>
            </item>
            <item
                android:id="@+id/couleurBeige"
                android:title="@string/beige_default"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurBrun"
                android:title="@string/brun"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurBleuPale"
                android:title="@string/bleu_pale"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurBleu"
                android:title="@string/bleu"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurBleuFonce"
                android:title="@string/bleu_fonce"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurRouge"
                android:title="@string/rouge"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurBourgogne"
                android:title="@string/bourgogne"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurJaune"
                android:title="@string/jaune"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurOr"
                android:title="@string/or"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurMauve"
                android:title="@string/mauve"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurVert"
                android:title="@string/vert"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurVertForet"
                android:title="@string/vert_foret"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurBlanc"
                android:title="@string/blanc"
                android:icon="@drawable/ic_menu_couleurs"/>
            <item
                android:id="@+id/couleurNoir"
                android:title="@string/noir"
                android:icon="@drawable/ic_menu_couleurs"/>
        </menu>

    </item>
</menu>