<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorItem"
    android:orientation="vertical"
    android:padding="4dp">

    <TextView
        android:id="@+id/prenomJoueur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/noir"
        android:textStyle="bold"
        android:text="Prénom" />
    <!--android:layout_marginEnd="8dp"-->

    <TextView
        android:id="@+id/nomJoueur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/prenomJoueur"
        android:textSize="18sp"
        android:textColor="@color/noir"
        android:textStyle="bold"
        android:text="Nom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/prenomJoueur"
        android:layout_alignBottom="@id/caracteristiquesClient"
        android:orientation="vertical">


        <TextView
            android:id="@+id/raceJoueur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:textColor="@color/noir"
            android:text="@string/raceJoueur" />

        <TextView
            android:id="@+id/classeJoueur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:textColor="@color/noir"
            android:text="@string/classeJoueur" />

        <TextView
            android:id="@+id/ageJoueur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:textColor="@color/noir"
            android:text="@string/ageJoueur" />

        <TextView
            android:id="@+id/genreJoueur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:textColor="@color/noir"
            android:text="@string/genreJoueur" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/caracteristiquesClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nomJoueur"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fiabiliteClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/noir"
                android:text="@string/fiabiliteClient"/>

            <TextView
                android:id="@+id/zirconsJoueur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/noir"
                android:text="@string/zirconsJoueur" />

            <TextView
                android:id="@+id/factionJoueur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/noir"
                android:text="@string/factionJoueur" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>